# ScaleTraining

./: .gitignore  AGENTS.md  README.md  code_current.md  pyproject.toml  research_current.md  result.json
.github/workflows/: ci.yml
conf/: config.yaml
conf/device/: cpu.yaml
conf/eval/: default.yaml
conf/generation/: default.yaml
conf/model/: tiny.yaml
conf/moe/: default.yaml
conf/training/: default.yaml  smoke.yaml
docs/: architecture.md  reviewer-demo.md
notes/: architecture.md
notes/old/: TODO.md
research/: scale_training_closeout.md
research/data/: checkpoint_compatibility.json  legacy_run_inventory.json  tiny_stories_aux_lr_sweep.json
scripts/: audit_legacy_checkpoints.py  build_pretraining_corpus.py  model_size.py  plot_legacy_experiment.py  recover_legacy_runs.py  run_plan.py  run_report.py  smoke_cpu_e2e.py
src/scaletraining/: reporting.py
src/scaletraining.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scaletraining/config/: __init__.py
src/scaletraining/data_processing/: corpus_builder.py  dataloading.py  dataset_utils.py  tokenization.py  tokenizer.py  train_tokenizer.py
tests/: test_run_report.py
tests/config/: test_config.py
tests/data_processing/: test_dataset_utils.py
tests/entrypoints/: prepare_data_test.py  test_generation_entrypoint.py  test_run_evals.py  test_run_lm_eval.py  test_train.py
tests/model/: test_model.py  test_optimizers.py  test_training_loop.py
tests/scripts/: test_legacy_experiment.py
tests/util/: test_artifacts.py  test_eval_utils.py  test_generation_utils.py  test_wandb_utils.py
(+22 files in other folders)
