[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaletraining"
version = "0.1.0"
description = "Training platform for language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "torch>=2.1",
  "transformers>=4.38",
  "datasets>=2.18",
  "tokenizers>=0.15",
  "wandb>=0.16",
  "tqdm>=4.66",
  "numpy<2",
  "lm-eval>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scaletraining*"]
exclude = ["datasets*", "notes*", "notebooks*", "wandb*"]

[project.scripts]
scaletraining-tokenize = "scaletraining.data_processing.tokenization:main"
scaletraining-train = "scaletraining.entrypoints.train:main"
scaletraining-generate = "scaletraining.entrypoints.generate:main"
scaletraining-pack = "scaletraining.data_processing.batch_packer:main"
scaletraining-prepare-data = "scaletraining.entrypoints.prepare_data:main"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
  "slow: long-running tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/rocm6.2.4"]
